crates/plotnik-lib/tests/03-analyze/direct_recursion/no_input_right_recursion.txt
E = [
  (x)
  (E)
]
==== diagnostics ====
error: infinite recursion: cycle consumes no input
 --> query.ptk:3:4
  |
3 |   (E)
  |    ^
  |    |
  |    references itself
  |
help: recursive references must consume input before recursing
==== symbols ====
E
  E (cycle)
